# diffusion-models

./: diffusion_model_image_generation_roadmap.md
module-0/small-vit-experiment/: .gitignore  README.md  pyproject.toml
module-0/small-vit-experiment/src/small_vit_mlx/: __init__.py  data.py  model.py  predict.py  train.py
module-1/DDPM/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
module-1/DDPM/infra/: main.tf  outputs.tf  variables.tf
module-1/DDPM/scripts/: destroy_aws.sh  download_aws_runs.sh  setup_aws.sh  ssh_aws.sh  stop_aws.sh  tail_logs.sh  train_aws.sh
module-1/DDPM/src/cuda_ddpm/: __init__.py  cli.py  data.py  diffusion.py  model.py
module-1/DDPM/src/mlx_ddpm/: __init__.py  cli.py  data.py  diffusion.py  model.py
module-2/DDIM/: .dockerignore  Dockerfile  README.md  pyproject.toml
module-2/DDIM/src/cuda_ddim/: __init__.py  cli.py  data.py  diffusion.py  model.py
module-2/DDIM/src/mlx_ddim/: __init__.py  cli.py  data.py  diffusion.py  model.py
