[project]
name = "small-vit-mlx"
version = "0.1.0"
description = "Small Vision Transformer experiment implemented with Apple MLX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.29.0",
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "tqdm>=4.67.0",
]

[project.scripts]
small-vit-train = "small_vit_mlx.train:main"
small-vit-predict = "small_vit_mlx.predict:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
