[project]
name = "mlx-ddpm"
version = "0.1.0"
description = "Small educational DDPM implementations in MLX and PyTorch/CUDA based on Ho et al. 2020."
readme = "README.md"
authors = [
    { name = "Reshzera", email = "reoshiro13@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.31.2; sys_platform == 'darwin'",
    "numpy>=2.3.0",
    "pillow>=12.2.0",
    "torch>=2.4.0",
    "tqdm>=4.68.3",
]

[project.scripts]
mlx-ddpm = "mlx_ddpm.cli:main"
cuda-ddpm = "cuda_ddpm.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
